intTests/test_parse_errors/lexer005.log.good
 Loading file "lexer005.saw"
 Stack trace:
   (builtin) (at top level)
Parse error at lexer005.saw:3:20-3:21: Unexpected `}'

FAILED
